--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   khmer_fonts: ^0.0.6
   csc_picker: ^0.2.7
   animated_background: ^2.0.0
+  image_picker: ^1.1.2
+  video_player: ^2.8.6
+  universal_io: ^2.2.2
+  date_picker_plus: ^4.0.0
+  flutter_localizations:
+    sdk: flutter
+  google_maps: ^7.1.0
+  google_maps_flutter: ^2.7.0
 
 dev_dependencies:
   flutter_test:
