--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
     sdk: flutter
   google_maps: ^7.1.0
   google_maps_flutter: ^2.7.0
+  easy_sidemenu: ^0.6.0
+  responsive_table: ^0.2.0+2
 
 dev_dependencies:
   flutter_test:
