--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   intl: any
   dio: ^5.4.3+1
   number_to_words: ^1.0.0
+  dropdown_button2: ^2.3.9
+  dropdown_search: ^5.0.3
+  dropdown_textfield: ^1.2.0
 
 dev_dependencies:
   flutter_test:
