--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   dropdown_search: ^5.0.3
   dropdown_textfield: ^1.2.0
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
