--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   dropdown_search: ^5.0.3
   dropdown_textfield: ^1.2.0
   flutter_image_compress: ^2.3.0
+  stepper_page_view: ^0.0.2
 
 dev_dependencies:
   flutter_test:
