--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_image_compress_web: ^0.1.4+1
   image: any
   progress_dialog_null_safe: any
+  sn_progress_dialog: ^1.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
